fixed spacing problems

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -17,6 +17,21 @@ body {
 
 .nav-bar {
   margin-left: 20px;
-  
+  margin-right: 1000px;
 
+}
+
+ul {
+  margin-right: 1000px;
+
+
+}
+
+
+li {
+  margin-right: 1000px;
+}
+
+p {
+  margin-left: 200px;
 }
